# mlx-claude

./: .gitignore  LICENSE  NOTICE  README.md  anthropic_shim.py  bootstrap.sh  mlx-claude.py  pyproject.toml  sse_sanitizer.py  uninstall.sh
bonsai_claude/: cli.py
